--- a/Dynamics365.Monitoring.Plugins.UnitTests/packages.config
+++ b/Dynamics365.Monitoring.Plugins.UnitTests/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FakeItEasy" version="3.2.0" targetFramework="net471" />
+  <package id="FakeXrmEasy.365" version="1.52.0" targetFramework="net471" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="8.2.0.1" targetFramework="net471" />
+  <package id="Microsoft.CrmSdk.Deployment" version="8.2.0.1" targetFramework="net471" />
+  <package id="Microsoft.CrmSdk.Workflow" version="8.2.0.1" targetFramework="net471" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="8.2.0.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net471" />
 </packages>
