--- a/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
+++ b/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Content Include="ApplicationInsightsDemo-UCI.js" />
     <Content Include="ApplicationInsightsDemo.js" />
+    <Content Include="ConsoleApiDemo.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
