--- a/Dynamics365.Monitoring.Plugins.UnitTests/Dynamics365.Monitoring.Plugins.UnitTests.csproj
+++ b/Dynamics365.Monitoring.Plugins.UnitTests/Dynamics365.Monitoring.Plugins.UnitTests.csproj
@@ -104,6 +104,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dynamics365.Monitoring.Plugins\Dynamics365.Monitoring.Plugins.csproj">
+      <Project>{DF9F0213-6C0F-41C3-9C35-5078301EDFD0}</Project>
+      <Name>Dynamics365.Monitoring.Plugins</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
