--- a/Dynamics365.Monitoring.Plugins.UnitTests/Dynamics365.Monitoring.Plugins.UnitTests.csproj
+++ b/Dynamics365.Monitoring.Plugins.UnitTests/Dynamics365.Monitoring.Plugins.UnitTests.csproj
@@ -96,6 +96,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContextBuilder.cs" />
     <Compile Include="Ready2019TestPluginPushToAppInsights.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +109,9 @@
       <Project>{DF9F0213-6C0F-41C3-9C35-5078301EDFD0}</Project>
       <Name>Dynamics365.Monitoring.Plugins</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Demos\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
