Added older version of app insights (ai.0.js) and newer version (a1.2.js) based off this document: https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup

--- a/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
+++ b/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
@@ -36,6 +36,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CDN\ai.0.js" />
+    <Content Include="CDN\ai.2.js" />
+    <Content Include="CDN\ai.2.min.js" />
     <Content Include="ApplicationInsightsDemo-UCI.js" />
     <Content Include="ApplicationInsightsDemo.js" />
   </ItemGroup>
