--- a/.github/workflows/NuGet Generation.yml
+++ b/.github/workflows/NuGet Generation.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build solution and generate NuGet package
         run: |  
-          cd <project>
+          cd Dynamics365.Monitoring.Plugins
           dotnet pack -c Release -o out  
 
       - name: Push generated package to GitHub registry
