--- a/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
+++ b/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5719205E-BAD4-46B1-9890-CC986E4B10B3}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Dynamics365.Monitoring.WebResources</RootNamespace>
     <AssemblyName>Dynamics365.Monitoring.WebResources</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
