--- a/.github/workflows/NuGetPackage.NET.yml
+++ b/.github/workflows/NuGetPackage.NET.yml
@@ -1,8 +1,8 @@
 name: Publish NuGet Package for .NET Framework DLL
  
 on:
-  issues:
-    types: [milestoned]
+  milestone:
+    types: [closed]
  
 jobs:
   build:
