--- a/.github/workflows/NuGetPackage.NET.yml
+++ b/.github/workflows/NuGetPackage.NET.yml
@@ -29,11 +29,11 @@ jobs:
       run: nuget pack nuspec\D365.Monitoring.nuspec  -prop configuration=debug -BasePath Dynamics365.Monitoring.Plugins\
  
     - name: Push generated package to GitHub registry
-      run: dotnet nuget push ./<project>/out/*.nupkg --skip-duplicate --no-symbols true
+      run: dotnet nuget push ./Dynamics365.Monitoring.Plugins/out/*.nupkg --skip-duplicate --no-symbols true
  
     - name: Upload Artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         name: published_webapp
         path: bin\Release\Publish
-        
+
