--- a/.github/workflows/NuGetPackage.NET.yml
+++ b/.github/workflows/NuGetPackage.NET.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Build and Publish Web App
       run: msbuild Dynamics365.Monitoring.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
  
-    - name: Push generated package to GitHub registry
+    - name: Pack .NET Assembly as nuspec package
       run: nuget pack nuspec\D365.Monitoring.nuspec  -prop configuration=debug -BasePath Dynamics365.Monitoring.Plugins\
  
     - name: Push generated package to GitHub registry
-      run: dotnet nuget push *.nupkg --skip-duplicate --no-symbols true --source https://www.nuget.org/api/v2/package
+      run: dotnet nuget push *.nupkg --skip-duplicate --no-symbols true --source https://www.nuget.org/api/v2/package -k NUGET_API_TOKEN
  
     - name: Upload Artifact
       uses: actions/upload-artifact@v1.0.0
