--- a/.github/workflows/NuGetPackage.NET.yml
+++ b/.github/workflows/NuGetPackage.NET.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
     - name: Dump GitHub context
       env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
+        GITHUB_CONTEXT: ${{ toJson(github.event) }}
+        MILESTONE_NAME: ${{ github.event.title }}
+      run: echo "$MILESTONE_NAME"
 
     - uses: actions/checkout@v1
       name: Checkout Code
