--- a/.github/workflows/NuGetPackage.NET.yml
+++ b/.github/workflows/NuGetPackage.NET.yml
@@ -34,9 +34,11 @@ jobs:
     - name: Pack .NET Assembly as nuspec package
       run: nuget pack nuspec\D365.Monitoring.nuspec  -prop configuration=debug -BasePath Dynamics365.Monitoring.Plugins\
  
+    # - name: Push generated package to GitHub registry
+    #   run: dotnet nuget push *.nupkg --skip-duplicate --no-symbols true --api-key NUGET_API_TOKEN --source https://api.nuget.org/v3/index.json 
     - name: Push generated package to GitHub registry
-      run: dotnet nuget push *.nupkg --skip-duplicate --no-symbols true --api-key NUGET_API_TOKEN --source https://api.nuget.org/v3/index.json 
- 
+      run: nuget push *.nupkg -ApiKey NUGET_API_TOKEN -Source https://api.nuget.org/v3/index.json 
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v1.0.0
       with:
