--- a/.github/workflows/NuGet Generation.yml
+++ b/.github/workflows/NuGet Generation.yml
@@ -1,13 +1,13 @@
 name: NuGet Generation
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [closed]
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     types: [closed]
+#     branches:
+#       - master
 
 jobs:
   build:
