--- a/.github/workflows/AgentVariables.yml
+++ b/.github/workflows/AgentVariables.yml
@@ -4,9 +4,9 @@ name: Work with Agent Variables
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-# on:
-#   push:
-#     branches: [ master ]
+on:
+  push:
+      branches: [ master ]
 #   pull_request:
 #     branches: [ master ]
 
