--- a/.github/workflows/AgentVariables.yml
+++ b/.github/workflows/AgentVariables.yml
@@ -43,7 +43,7 @@ jobs:
         RUNNER_CONTEXT: ${{ toJson(runner) }}
       run: echo "$RUNNER_CONTEXT"
     - name: Dump tool cache
-      run: echo $RUNNER_CONTEXT.tool_cache
+      run: dir $RUNNER_CONTEXT.tool_cache
     - name: Dump strategy context
       env:
         STRATEGY_CONTEXT: ${{ toJson(strategy) }}
