--- a/.github/workflows/AgentVariables.yml
+++ b/.github/workflows/AgentVariables.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world! $ChromeWebDriver
+      run: echo Hello, world! $CHROMEWEBDRIVER
     
     - name: Dump GitHub context
       env:
