--- a/Dynamics365.Monitoring.Plugins/Dynamics365.Monitoring.Plugins.csproj
+++ b/Dynamics365.Monitoring.Plugins/Dynamics365.Monitoring.Plugins.csproj
@@ -71,12 +71,13 @@
     <Compile Include="ApplicationInsightsTrackException.cs" />
     <Compile Include="ApplicationInsightsTrackMetric.cs" />
     <Compile Include="Contracts\ApplicationInsightsContracts.cs" />
+    <Compile Include="Scenarios\MultipleRetrieveCalls.cs" />
     <Compile Include="Models\PluginContextToApplicationInsightContracts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PushMessageToApplicationInsights.cs" />
-    <Compile Include="ResourceLock.cs" />
+    <Compile Include="Scenarios\ResourceLock.cs" />
     <Compile Include="ILoggerExample.cs" />
-    <Compile Include="SleepyPlugin.cs" />
+    <Compile Include="Scenarios\SleepyPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="1.0.2.0.snk" />
