--- a/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
+++ b/Dynamics365.Monitoring.WebResources/Dynamics365.Monitoring.WebResources.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="MetricAlertPayload.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationInsights-ai2.0-Demo.js" />
@@ -46,6 +47,13 @@
     <Content Include="CDN\ai.2.min.js" />
     <Content Include="ApplicationInsightsDemo-UCI.js" />
     <Content Include="ApplicationInsightsDemo.js" />
+    <Content Include="ClarityDemo.js" />
+    <Content Include="integrationScenarios.js" />
+    <Content Include="exceptionScenarios.js" />
+    <Content Include="MonitoringInstructions.html" />
+    <Content Include="performanceScenarios.js" />
+    <Content Include="tracktelemetry.js" />
+    <Content Include="UCI.Popup.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
